[package]
name = "rend"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }
reqwest = { version = "0.12.9", features = ["json"] }
futures = "0.3.31"
async-trait = "0.1.83"
colored = "2.1.0"
clap = "4.5.21"
serde = { version = "1.0.215", features = ["derive"] }
base64 = "0.22.1"
toml = "0.8.19"
chrono = "0.4.38"
serde_json = "1.0.133"
regex = "1.11.1"
scraper = "0.13"
ring = "0.17.8"